@@ -23,6 +23,7 @@ Bugs fixed:
 - 1650708 Fixed embeddedObject qualifier in wrong place
 - 1656317 Fixed segfault with non-existing providerRegister
 - 1652255 Restructured broker upcalls
+- 1663390 Fixed problem with where clause in indicationfilter
 
 Changes in 1.2.0
 ================
